added wrapper and classes to blog section

--- a/index.html
+++ b/index.html
@@ -235,42 +235,44 @@
 
             <!-- beginning of blog section -->
             <section id="blog" class="blog">
-                <div>
-                    <h2>Latest news</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi maxime deserunt quas debitis consequuntur, unde molestiae natus totam nemo qui.</p>
+                <div class="wrapper">
+                    <div class="topBlog">
+                        <h2>Latest news</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi maxime deserunt quas debitis consequuntur, unde molestiae natus totam nemo qui.</p>
+                    </div>
+                    <ul>
+                        <li class="blogPost">
+                            <div class="imageContainer">
+                                <img src="./assets/blog1.jpg">
+                            </div>
+                            <div class="textContainer">
+                                <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi quo dolor!</p>
+                                <button class="btnVar4">Read more</button>
+                            </div>
+                        </li>
+                        <li class="blogPost">
+                            <div class="imageContainer">
+                                <img src="./assets/blog2.jpg">
+                            </div>
+                            <div class="textContainer">
+                                <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi quo dolor!</p>
+                                <button class="btnVar4">Read more</button>
+                            </div>
+                        </li>
+                        <li class="blogPost">
+                            <div class="imageContainer">
+                                <img src="./assets/blog3.jpg">
+                            </div>
+                            <div class="textContainer">
+                                <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi quo dolor!</p>
+                                <button class="btnVar4">Read more</button>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-                <ul>
-                    <li>
-                        <div class="newsImageContainer">
-                            <img src="./assets/blog1.jpg">
-                        </div>
-                        <div>
-                            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi quo dolor!</p>
-                            <button class="btnVar4">Read more</button>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="newsImageContainer">
-                            <img src="./assets/blog2.jpg">
-                        </div>
-                        <div>
-                            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi quo dolor!</p>
-                            <button class="btnVar4">Read more</button>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="newsImageContainer">
-                            <img src="./assets/blog3.jpg">
-                        </div>
-                        <div>
-                            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi quo dolor!</p>
-                            <button class="btnVar4">Read more</button>
-                        </div>
-                    </li>
-                </ul>
             </section>
             <!-- beginning of blog section -->
         </div>
