--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <a href="#">Blog</a>
                         </li>
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="./contact.html">Contact</a>
                         </li>
                         <li>
                             <a href="#">
@@ -39,6 +39,7 @@
                         </li>
                     </ul>
                 </div>
+                <!-- add FA hamburger menu here for tablet/mobile media queries -->
             </nav>
             <div class="hero">
                 <div class="wrapper">
@@ -287,7 +288,9 @@
                 <img src="./assets/logo.png">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum amet a non sapiente perspiciatis. Dignissimos amet quidem modi sapiente!</p>
                 <nav>
+                    <!-- SVGS not loading anymore, insert them again -->
                     <!-- need to figure out styling for social media icons and proper svg indentation-->
+                    <!-- consider using FA icons as well, to keep the HTML shorter and easier to read-->
                     <ul>
                         <li>
                             <a href="#">
@@ -415,6 +418,6 @@
         </div>
         <p class="copyright">Coded by <a href="#">Erika David</a>. Copyright &#169 <a href="https://www.junocollege.com" target="_blank">Juno College</a>. All rights reserved.</p>
     </footer>
-    <!-- end of about section -->
+    <!-- end of footer section -->
 </body>
 </html>
