--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <!-- end of about section -->
 
             <!-- beginning of product section -->
-            <section id="shopProducts" class="shopProducts">
+            <section id="shop" class="shop">
                 <div class="wrapper">
                     <div class="shopText">
                         <h2>Our products</h2>
