applied reusable style for section heading

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <!-- beginning of product section -->
             <section id="shop" class="shop">
                 <div class="wrapper">
-                    <div class="shopText">
+                    <div class="sectionHeading">
                         <h2>Our products</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla amet exercitationem itaque est nihil mollitia.</p>
                     </div>
@@ -182,7 +182,7 @@
             <!-- beginning of gallery section -->
             <section id="gallery" class="gallery">
                 <div class="wrapper">
-                    <div class="topGallery">
+                    <div class="sectionHeading">
                         <h2>Our gallery</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, tempore molestiae dolor cupiditate blanditiis accusantium?</p>
                         <div>
@@ -237,7 +237,7 @@
             <!-- beginning of blog section -->
             <section id="blog" class="blog">
                 <div class="wrapper">
-                    <div class="topBlog">
+                    <div class="sectionHeading">
                         <h2>Latest news</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi maxime deserunt quas debitis consequuntur, unde molestiae natus totam nemo qui.</p>
                     </div>
