changed footer logo to white version

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <div class="wrapper">
             <div class="footerCol first">
                 <!-- is this the logo you're supposed to use? color does not match PSD -->
-                <img src="./assets/logo.png">
+                <img src="./assets/logo-white.png">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum amet a non sapiente perspiciatis. Dignissimos amet quidem modi sapiente!</p>
                 <nav>
                     <!-- SVGS not loading anymore, insert them again -->
