--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             </div>
             <div class="footerCol second">
                 <h3>Quick links</h3>
-                <nav>
+                <nav class="division">
                     <ul>
                         <li>
                             <a href="#">About us</a>
@@ -338,7 +338,7 @@
             </div>
             <div class="footerCol third">
                 <h3>Recent products</h3>
-                <ul>
+                <ul class="division">
                     <li>
                         <div class="imageContainer">
                             <img src="./assets/product8.jpeg" alt="#">
@@ -371,16 +371,18 @@
             <div class="footerCol fourth">
                 <!-- should you use an address tag in this column? -->
                 <h3>Subscribe</h3>
-                <h4>Address:</h4>
-                <!-- comma in this address suggests <br> should be applied? -->
-                <p>5919 Trussville Crossings Pkwy, <br> Birmingham AL 35235</p>
-                <h4>Phone</h4>
-                <p>+88016888005654</p>
-                <form action="#" method="#" name="subscribeForm">
-                    <!-- look up sr-only for blank label -->
-                    <label for ="email"></label>
-                    <input type="text" id="email" class="email" name="email" placeholder="Enter Email...">
-                </form>
+                <div class="division">
+                    <h4>Address:</h4>
+                    <!-- comma in this address suggests <br> should be applied? -->
+                    <p>5919 Trussville Crossings Pkwy, <br> Birmingham AL 35235</p>
+                    <h4>Phone</h4>
+                    <p>+88016888005654</p>
+                    <form action="#" method="#" name="subscribeForm">
+                        <!-- look up sr-only for blank label -->
+                        <label for="email"></label>
+                        <input type="text" id="email" class="email" name="email" placeholder="Enter Email...">
+                    </form>
+                </div>
             </div>
         </div>
         <p class="copyright">Coded by <a href="#">Erika David</a>. Copyright &#169 <a href="https://www.junocollege.com" target="_blank">Juno College</a>. All rights reserved.</p>
