added notes to change footer class name to something that makes more sense

--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
             </div>
             <div class="footerCol second">
                 <h3>Quick links</h3>
+                <!-- rename class .division -->
                 <nav class="division">
                     <ul>
                         <li>
@@ -338,6 +339,7 @@
             </div>
             <div class="footerCol third">
                 <h3>Recent products</h3>
+                <!-- rename class .division -->
                 <ul class="division">
                     <li>
                         <div class="imageContainer">
@@ -371,6 +373,7 @@
             <div class="footerCol fourth">
                 <!-- should you use an address tag in this column? -->
                 <h3>Subscribe</h3>
+                <!-- rename class .division -->
                 <div class="division">
                     <h4>Address:</h4>
                     <!-- comma in this address suggests <br> should be applied? -->
