added extra <ul> in shop section

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
                                 <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
+                    </ul>
+                    <ul class="productGallery">
                         <li>
                             <div class="imageContainer">
                                 <img src="./assets/product5.jpeg" alt="#">
