updated button classes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="textContainer">
                         <h1>Providing Tasty & Healthy Food</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum alias provident quas beatae libero sint ducimus, possimus tenetur quis dolor ipsam voluptatem voluptas vel. Totam doloremque ullam magnam quidem! Fugit?</p>
-                        <button>Shop Now</button>
+                        <button class="btnVar2">Shop Now</button>
                     </div>
                     <div class="imageContainer">
                         <img src="./assets/header/header.png" alt="#">
@@ -63,7 +63,7 @@
                     <h3>Providing Best Organic Products.</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus porro eveniet sit tempora? Minus sunt quidem libero, reprehenderit vel illo commodi laborum tenetur error deleniti perferendis ipsum, quo autem atque!</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, modi fuga laudantium adipisci incidunt voluptate consequatur eveniet minus voluptatibus id?</p>
-                    <button>Shop Now</button>
+                    <button class="btnVar2">Shop Now</button>
                 </div>
                 <div class="textContainer">
                     <p class="aboutFact">We've been providing the best service for 20 years.</p>
@@ -88,7 +88,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p class="price">$370 <span>$350</span></p>
-                                <button class="btnVar2">Add to cart</button>
+                                <button>Add to cart</button>
                             </div>
                         </li><li>
                             <div class="imageContainer">
@@ -98,7 +98,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p class="price">$370 <span>$350</span></p>
-                                <button class="btnVar2">Add to cart</button>
+                                <button>Add to cart</button>
                             </div>
                         </li>
                         <li>
@@ -109,7 +109,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p class="price">$370 <span>$350</span></p>
-                                <button class="btnVar2">Add to cart</button>
+                                <button>Add to cart</button>
                             </div>
                         </li>
                         <li>
@@ -120,7 +120,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p class="price">$370 <span>$350</span></p>
-                                <button class="btnVar2">Add to cart</button>
+                                <button>Add to cart</button>
                             </div>
                         </li>
                     </ul>
@@ -133,7 +133,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p class="price">$370 <span>$350</span></p>
-                                <button class="btnVar2">Add to cart</button>
+                                <button>Add to cart</button>
                             </div>
                         </li>
                         <li>
@@ -144,7 +144,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p class="price">$370 <span>$350</span></p>
-                                <button class="btnVar2">Add to cart</button>
+                                <button>Add to cart</button>
                             </div>
                         </li>
                         <li>
@@ -155,7 +155,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p class="price">$370 <span>$350</span></p>
-                                <button class="btnVar2">Add to cart</button>
+                                <button>Add to cart</button>
                             </div>
                         </li>
                         <li>
@@ -166,12 +166,12 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p class="price">$370 <span>$350</span></p>
-                                <button class="btnVar2">Add to cart</button>
+                                <button>Add to cart</button>
                             </div>
                         </li>
                     </ul>
                     <div class="shopBtn">
-                        <button class="primaryBtn">Load more</button>
+                        <button class="btnVar2">Load more</button>
                     </div>
                 </div>
             </section>
@@ -226,7 +226,7 @@
                         </ul>
                     </div>
                     <div class="bottomGallery">
-                        <button class="primaryBtn">load more</button>
+                        <button class="btnVar2">load more</button>
                     </div>
                 </div>
             </section>
