updated text container class in shop section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="imageContainer">
                             <img src="./assets/product1.jpeg" alt="#">
                         </div>
-                        <div class="productInfoContainer">
+                        <div class="textContainer">
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
@@ -94,7 +94,7 @@
                         <div class="imageContainer">
                             <img src="./assets/product2.jpeg" alt="#">
                         </div>
-                        <div class="productInfoContainer">
+                        <div class="textContainer">
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
@@ -105,7 +105,7 @@
                         <div class="imageContainer">
                             <img src="./assets/product3.jpeg" alt="#">
                         </div>
-                        <div class="productInfoContainer">
+                        <div class="textContainer">
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
@@ -116,7 +116,7 @@
                         <div class="imageContainer">
                             <img src="./assets/product4.jpeg" alt="#">
                         </div>
-                        <div class="productInfoContainer">
+                        <div class="textContainer">
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
@@ -129,7 +129,7 @@
                         <div class="imageContainer">
                             <img src="./assets/product5.jpeg" alt="#">                            
                         </div>
-                        <div class="productInfoContainer">
+                        <div class="textContainer">
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
@@ -140,7 +140,7 @@
                         <div class="imageContainer">
                             <img src="./assets/product6.jpeg" alt="#">
                         </div>
-                        <div class="productInfoContainer">
+                        <div class="textContainer">
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
@@ -151,7 +151,7 @@
                         <div class="imageContainer">
                             <img src="./assets/product7.jpeg" alt="#">
                         </div>
-                        <div class="productInfoContainer">
+                        <div class="textContainer">
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
@@ -162,7 +162,7 @@
                         <div class="imageContainer">
                             <img src="./assets/product8.jpeg" alt="#">
                         </div>
-                        <div class="productInfoContainer">
+                        <div class="textContainer">
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>                                
