parallax class added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <!-- add FA hamburger menu here for tablet/mobile media queries -->
         </nav>
-        <div class="hero">
+        <div class="hero parallax">
             <div class="wrapper">
                 <div class="textContainer">
                     <h1>Providing Tasty & Healthy Food</h1>
