added flexColumn class

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <!-- beginning of product section -->
         <section id="shop" class="shop">
-            <div class="wrapper">
+            <div class="wrapper flexColumn">
                 <div class="sectionHeading">
                     <h2>Our products</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla amet exercitationem itaque est nihil mollitia.</p>
@@ -283,6 +283,7 @@
             <div class="footerCol first">
                 <!-- is this the logo you're supposed to use? color does not match PSD -->
                 <img src="./assets/logo-white.png">
+                <div class="division">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum amet a non sapiente perspiciatis. Dignissimos amet quidem modi sapiente!</p>
                 <nav>
                     <!-- SVGS not loading anymore, insert them again -->
@@ -312,11 +313,12 @@
                     </ul>
                 </nav>
             </div>
+            </div>
             <div class="footerCol second">
                 <h3>Quick links</h3>
                 <!-- rename class .division -->
                 <nav class="division">
-                    <ul>
+                    <ul class="flexColumn">
                         <li>
                             <a href="#">About us</a>
                         </li>
