added animate class to hero image

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <button class="btnVar2">Shop Now</button>
                 </div>
                 <div class="imageContainer">
-                    <img src="./assets/header/header.png" alt="#">
+                    <img class="animate" src="./assets/header/header.png" alt="#">
                 </div>                
             </div>
         </div>
@@ -65,7 +65,7 @@
                     <button class="btnVar2">Shop Now</button>
                 </div>
                 <div class="textContainer">
-                    <p class="aboutFact">We've been providing the best service for 20 years.</p>
+                    <p class="aboutFact">We've been providing the best services for 20 years.</p>
                 </div>
             </div>
         </section>
