--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                     <h4>Address:</h4>
                     <!-- comma in this address suggests <br> should be applied. -->
                     <p>5919 Trussville Crossings Pkwy, <br> Birmingham AL 35235</p>
-                    <h4>Phone</h4>
+                    <h4>Phone:</h4>
                     <p>+88016888005654</p>
                     <form action="#" method="#" name="subscribeForm">
                         <label for="email" class="sr-only">Enter email to subscribe</label>
