contact section skeleton added

--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,39 @@
     <!-- end of header section -->
     
     <section id="contact" class="contact">
+        <div class="wrapper">
+            <ul class="contactInfoContainer">
+                <li>
+                    <h3>Office address</h3>
+                    <p>3812 Lena Lane City Jackson Mississippi</p>
+                </li>
+                <li>
+                    <h3>Phone number </h3>
+                    <p>601-594-3405</p>
+                </li>
+                <li>
+                    <h3>Email</h3>
+                    <p>4cfdx9dye9e@temporary-mail.net</p>
+                </li>
+            </ul>
+            <div class="formContainer">
+                <form action="#" method="#" name="contactForm">
+                    <label for="name" class="sr-only">Enter your name</label>
+                    <input type="text" id="name" class="name" name="name" placeholder="Your full name*" required>
+                    <label for="email" class="sr-only">Enter yout email</label>
+                    <input type="text" id="email" class="email" name="email" placeholder="Your email address*" required>
+                    <label for="phone" class="sr-only">Enter your phone number</label>
+                    <input type="text" id="phone" class="phone" name="phone" placeholder="Your phone number">
+                    <label for="website" class="sr-only">Enter your website</label>
+                    <input type="text" id="website" class="website" name="website" placeholder="Your website link">
+                    <label for="subject" class="sr-only">Enter message subject</label>
+                    <input type="text" id="subject" class="subject" name="subject" placeholder="Subject...">
+                    
+                    <label for="mesages" class="sr-only">Enter message</label>
+                    <textarea name="userMessage" id="message" class="message" placeholder="Your message" required></textarea>
+                </form>
+            </div>
+        </div>
     </section>
 
     <!-- beginning of footer section -->
