--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/cdc49ed55f.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>Organic | Juno College Project One</title>
-    <link href="./styles/style.css" rel="stylesheet">
+    <link href="../styles/style.css" rel="stylesheet">
 </head>
 <body>
     <!-- beginning of header section -->
@@ -45,8 +45,8 @@
     <!-- end of header section -->
     
     <section id="contact" class="contact">
-        <div class="wrapper">
-            <ul class="contactInfoContainer">
+        <div class="wrapper flexRow">
+            <ul class="textContainer contactInfo">
                 <li>
                     <h3>Office address</h3>
                     <p>3812 Lena Lane City Jackson Mississippi</p>
@@ -60,21 +60,28 @@
                     <p>4cfdx9dye9e@temporary-mail.net</p>
                 </li>
             </ul>
-            <div class="formContainer">
+            <div class="textContainer contactForm">
                 <form action="#" method="#" name="contactForm">
-                    <label for="name" class="sr-only">Enter your name</label>
-                    <input type="text" id="name" class="name" name="name" placeholder="Your full name*" required>
-                    <label for="email" class="sr-only">Enter yout email</label>
-                    <input type="text" id="email" class="email" name="email" placeholder="Your email address*" required>
-                    <label for="phone" class="sr-only">Enter your phone number</label>
-                    <input type="text" id="phone" class="phone" name="phone" placeholder="Your phone number">
-                    <label for="website" class="sr-only">Enter your website</label>
-                    <input type="text" id="website" class="website" name="website" placeholder="Your website link">
-                    <label for="subject" class="sr-only">Enter message subject</label>
-                    <input type="text" id="subject" class="subject" name="subject" placeholder="Subject...">
-                    
-                    <label for="mesages" class="sr-only">Enter message</label>
-                    <textarea name="userMessage" id="message" class="message" placeholder="Your message" required></textarea>
+                    <div>
+                        <label for="name" class="sr-only">Enter your name</label>
+                        <input type="text" id="name" class="name" name="name" placeholder="Your full name*" required>
+                        <label for="email" class="sr-only">Enter yout email</label>
+                        <input type="text" id="email" class="email" name="email" placeholder="Your email address*" required>
+                    </div>
+                    <div>
+                        <label for="phone" class="sr-only">Enter your phone number</label>
+                        <input type="text" id="phone" class="phone" name="phone" placeholder="Your phone number">
+                        <label for="website" class="sr-only">Enter your website</label>
+                        <input type="text" id="website" class="website" name="website" placeholder="Your website link">
+                    </div>
+                    <div>
+                        <label for="subject" class="sr-only">Enter message subject</label>
+                        <input type="text" id="subject" class="subject" name="subject" placeholder="Subject...">
+                    </div>
+                    <div>
+                        <label for="mesages" class="sr-only">Enter message</label>
+                        <textarea name="userMessage" id="message" class="message" placeholder="Your message" required></textarea>
+                    </div>
                 </form>
             </div>
         </div>
