--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,9 @@
         </div>    
     </header>
     <!-- end of header section -->
-    
+
+    <!-- do you need a main tag here? -->
+    <!-- beginning of contact section -->
     <section id="contact" class="contact">
         <div class="wrapper flexRow">
             <ul class="textContainer contactInfo">
@@ -86,6 +88,7 @@
             </div>
         </div>
     </section>
+    <!-- end of contact section -->
 
     <!-- beginning of footer section -->
     <footer>
